syntax = "proto3";
package pb;

message Tenant {
    string id = 1;
    string name = 2;
}

message Account {
    string id = 1;
    string name = 2;
    string tenant_id = 3;
}

message PostAccountRequest {
    string name = 1;
}

message PostAccountResponse {
    Account account = 1;
}

message GetAccountRequest {
    string id = 1;
}

message GetAccountResponse {
    Account account = 1;
}

message GetAccountsRequest {
    uint64 skip = 1;
    uint64 take = 2;
}

message GetAccountsResponse {
    repeated Account accounts = 1;
}

message CreateTenantRequest {
    string name = 1;
}

message CreateTenantResponse {
    Tenant tenant = 1;
}

service AccountService {
    rpc CreateTenant (CreateTenantRequest) returns (CreateTenantResponse) {
    }
    rpc PostAccount (PostAccountRequest) returns (PostAccountResponse) {
    }
    rpc GetAccount (GetAccountRequest) returns (GetAccountResponse) {
    }
    rpc GetAccounts (GetAccountsRequest) returns (GetAccountsResponse) {
    }
}
